--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "librosa>=0.10.0",
     "soundfile>=0.12.0",
     "tqdm>=4.65.0",
-    "pillow>=10.0.0"
+    "pillow>=10.0.0",
+    "hyperpyyaml>=1.2.2"
 ]
 
 [project.urls]
